# rust-parallel-with-python

./: Cargo.toml  README.md  execution_times.csv  fast_plot.py  hello.py  main.py  only_python.py  only_python_execution_times.csv  only_python_plot.py  parallel.py  plots.py  pyproject.toml
my_rust_extension/: Cargo.toml  pyproject.toml
my_rust_extension/src/: lib.rs
src/: lib.rs
