[package]
name = "rust-parallel-with-python"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "macros"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
tokio = { version = "1.41.0", features = ["full"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

